# mirror-friendly-minimum-spanning-tree

./: .gitignore  .project  README.md  hard-project.cabal  mirror-friendly-minimum-spanning-tree.cabal  readme.md  results.csv  runTests.ps1  stack.yaml
.stack-work/install/x86_64-osx/lts-9.11/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  OneTuple-0.2.1-7xFCZYYP3bD3K0JO3QlNLg  QuickCheck-2.9.2-LvlomhGMxrFBkX1zwiWpQu  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  fgl-5.6.0.0-7hDKrnuXAeL5gWTTppBflt  hard-project-0.1.0.0-F1RjQrpukxvAKBAzpUsqhT  hard-project-0.1.0.0-JiLdRhV0AFMB55kjwkqqqB  hspec-2.4.4-Ct0Af2AzisB8bPqGMHHFvj  hspec-core-2.4.4-Ezb0jq4rRfBJWZtpolvs1E  hspec-discover-2.4.4-99Suq6sFZ1T6o4isjc43TZ  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  quickcheck-io-0.2.0-4pLO1WRxoBW9gt8EnME0zS  random-1.1-9tceXaeYIMZ4JrKq20Egog  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tf-random-0.5-CJZw1ZWS5MOJlR60HqKEZL  tuple-0.3.0.2-fw19c2mVE4S4kTOAA0LW
.stack-work/install/x86_64-osx/lts-9.11/8.0.2/pkgdb/: fgl-5.6.0.0-7hDKrnuXAeL5gWTTppBflt.conf  package.cache  (+1 more)
app/: Main.hs
data/: 125ST.uwg  TestFile1.uwg  TestFile10.uwg  TestFile2.uwg  TestFile5.uwg  TestFile6.uwg  TestFile9.uwg  test01.uwg  test02.uwg  test04.uwg
data/test/: CheckWrong.py  TestFile3.uwg  TestFile4.uwg  TestFile7.uwg  TestFile8.uwg
src/: Example.hs  Lib.hs  LinearMFMST.hs  MirrorFriendlyMinimumSpanningTree.hs  TreeParser.hs
src/graph/: DFS.java  Edge.java  Graph.java  Node.java
src/tamura/: Tamura.java  TamuraList.java
(+75 files in other folders)
