name:                hard-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hard-project#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MirrorFriendlyMinimumSpanningTree
  build-depends:       base >= 4.7 && < 5
                     , fgl >= 5.6
                     , parsec >= 3.1
                     , tuple >= 0.3
                     , Unique >= 0.4
                     , array >= 0.5
                     , containers >= 0.5
  default-language:    Haskell2010

executable hard-project
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , time >= 1.7
                     , hard-project
  default-language:    Haskell2010

test-suite hard-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hard-project
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hard-project
